3d view port glsl background color, game background color, render background color and camera background color are inconsistent #23073

Closed
opened 2010-07-28 22:12:59 +02:00 by Tom Musgrove · 4 comments
Member

%%%These colors are not (neccessarily) the same and it is unclear what causes the difference.

regular 3d view port background color, 3d view port glsl background color, game engine background color, render background color and camera background color.

A recent commit (right before beta?) switched the background color to solid black when glsl is on, previosly it was the same as normal view.

The mesh is also GLSL rendering drastically darker than the actual render, which makes it no longer useful for trying to get your rough materials correct without having to render, whereas previously it gace acceptable results.

%%%

%%%These colors are not (neccessarily) the same and it is unclear what causes the difference. regular 3d view port background color, 3d view port glsl background color, game engine background color, render background color and camera background color. A recent commit (right before beta?) switched the background color to solid black when glsl is on, previosly it was the same as normal view. The mesh is also GLSL rendering drastically darker than the actual render, which makes it no longer useful for trying to get your rough materials correct without having to render, whereas previously it gace acceptable results. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I cant redo this:

  • the 'Only Render' option uses the world horizon color (see Only Render option in the toolbar).

  • I cant get glsl to display with a different background color.

  • About the materials being darker, can you test with color management on/off?%%%

%%%I cant redo this: - the 'Only Render' option uses the world horizon color (see Only Render option in the toolbar). - I cant get glsl to display with a different background color. - About the materials being darker, can you test with color management on/off?%%%

%%%3d view background color and glsl were not taking color management into account yet, should be fixed now.%%%

%%%3d view background color and glsl were not taking color management into account yet, should be fixed now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#23073
No description provided.