Fix #23073: glsl and 3d view background color didn't take color managment into account yet, should now be consistent with render.